// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Glyph /> renders diagonal fraction 1`] = `
<span
  className="inline-0"
>
  1/3
</span>
`;

exports[`<Glyph /> renders normal by default 1`] = `
<span
  className="inline-0"
>
  Text
</span>
`;

exports[`<Glyph /> renders ordinal suffix 1`] = `
<span
  className="inline-0"
>
  1st
</span>
`;

exports[`<Glyph /> renders slashed zero 1`] = `
<span
  className="inline-0"
>
  100
</span>
`;

exports[`<Glyph /> renders stacked fraction 1`] = `
<span
  className="inline-0"
>
  1/3
</span>
`;

exports[`<Glyph /> renders tabular numbers 1`] = `
<span
  className="inline-0"
>
  123.45
</span>
`;
